<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/divider_line_color">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:background="@color/bg_color_white">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/lv_lock_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <view
                class="android.support.v4.view.ViewPager"
                layout_width="match_parent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_line_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/bg_color_white"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@color/font_black"
                            android:text="@string/today_test_num"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/tv_today_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize = "@dimen/font_num"
                            android:hint="@string/hint_test"
                            />
                    </LinearLayout>

                </LinearLayout>

                <view
                    class="android.support.v4.view.ViewPager"
                    layout_width="match_parent"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/divider_line_color"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/bg_color_white"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@color/font_green"
                            android:text="@string/success_test_num"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/tv_success_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize = "@dimen/font_num"
                            android:hint="@string/hint_test"
                            />
                    </LinearLayout>

                </LinearLayout>

                <view
                    class="android.support.v4.view.ViewPager"
                    layout_width="match_parent"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/divider_line_color"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/bg_color_white"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@color/font_red"
                            android:text="@string/fail_test_num"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/tv_fail_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize = "@dimen/font_num"
                            android:textColor="@color/font_red"
                            android:hint="@string/hint_test"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <view
            class="android.support.v4.view.ViewPager"
            layout_width="match_parent"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider_line_color"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:background="@color/bg_color_white">

            <TextView
                android:id="@+id/button_multimeter_connect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/bg_color_gray_light"
                android:gravity="center"
                android:text="连接万用表"
                android:textColor="@color/font_black"
                android:textSize="40sp"
                />

                <!--<TextView-->
                    <!--android:id="@+id/button_electric_quantity"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_weight="1"-->
                    <!--android:gravity="center"-->
                    <!--android:background="@color/bg_color_gray_light"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_marginBottom="10dp"-->
                    <!--android:text="@string/electric_quantity"-->
                    <!--android:textColor="@color/font_black"-->
                    <!--android:textSize="50sp"-->
                    <!--/>-->

                <TextView
                    android:id="@+id/button_open_lock"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/bg_color_gray_light"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/open_door_test"
                    android:textColor="@color/font_black"
                    android:textSize="50sp"/>


                <TextView
                    android:id="@+id/button_rescan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/bg_color_gray_light"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/resume_scan"
                    android:textColor="@color/font_black"
                    android:textSize="50sp"/>

            </LinearLayout>

        </LinearLayout>

</android.support.constraint.ConstraintLayout>
